automatically backed up by learn

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,7 @@
+<% if !params[:author].blank? %>
+  <% @posts = Post.where(author: params[:author]) %>
+<% end %>
+
 <div>
   <h3>Filter posts:</h3>
   <%= form_tag("/posts", method: "get") do %>
