--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,5 +11,7 @@
 </div>
 
 <% @posts.each do |post| %>
-  <div><%= post.title %> - <%= last_updated(post) %></div>
+  <div><h2><%= post.title %></h2>
+    <h3>by: <%= link_to post.author.name, author_path(post.author) %></h3>
+    <p><%= post.description %></p></div>
 <% end %>
